Fix horizontal scroll on awards

--- a/static/styles/_custom.scss
+++ b/static/styles/_custom.scss
@@ -53,7 +53,6 @@ section.segmenter {
   min-height: calc(100%);
   justify-content: left;
   overflow-x: auto;
-  position: absolute;
   bottom: 0;
 }
 .awards::-webkit-scrollbar {display: none;}
